--- a/DataForecaster/DataForecaster.csproj
+++ b/DataForecaster/DataForecaster.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Math\Matrix.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Math\QRDecomposition.cs" />
+    <Compile Include="Math\Vector.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
