--- a/DataForecaster/DataForecaster.csproj
+++ b/DataForecaster/DataForecaster.csproj
@@ -44,9 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Math\Matrix.cs" />
+    <Compile Include="Math\MatrixQrDecomposition.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Math\QRDecomposition.cs" />
     <Compile Include="Math\Vector.cs" />
   </ItemGroup>
   <ItemGroup>
