--- a/DataForecaster/DataForecaster.csproj
+++ b/DataForecaster/DataForecaster.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Approach\LinearRegression.cs" />
     <Compile Include="Math\Matrix.cs" />
     <Compile Include="Math\MatrixQrDecomposition.cs" />
     <Compile Include="Program.cs" />
