--- a/DataForecaster/DataForecaster.csproj
+++ b/DataForecaster/DataForecaster.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Math\Vector.cs" />
+    <Compile Include="Stat\StudentTDistribution.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
